--- a/exercises/courses/css/styles.css
+++ b/exercises/courses/css/styles.css
@@ -1,7 +1,7 @@
 tr,
 td,
 th {
-  padding: 0.4rem;
+  padding: 0.6rem;
 }
 
 table {
@@ -10,5 +10,5 @@ table {
 }
 
 tr {
-  border: 1px solid red;
+  border-bottom: 1px solid #ddd;
 }
